<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TextWhisper</string>
    <string name="str_version">Version 1.1.1</string>
    <string name="action_settings">Settings</string>
    <string name="str_thanks">Thank you for downloading TextWhisper.</string>
    <string name="str_inform">This app will read out your incoming text messages to you when you have your earphones/headphones on.</string>
    <string name="str_example">For example, if you get a whatsapp message from a friend named Bob, this app will read out \"Whatsapp message from Bob\"</string>
    <string name="str_nextpage">Swipe to the next page for instructions on setting it up-></string>
    <string name="str_instr_head">SOFTWARE SETUP</string>
    <string name="str_swipe">Onto the next page - Swipe</string>
    <string name="str_instr_string">Switch ON the accessibility settings for TextWhisper as shown in the picture on the right. Click on the button below and it\'ll take you there!</string>
    <string name="acc_string">Open Accessibility Settings</string>
    <string name="str_finish_setup">Thats it! TextWhisper is all set up. Just close this menu and continue what you were doing!!</string>
    <string name="str_tw_stopped">TW has stopped. Come back here to switch it ON whenever you feel like you need it.</string>
    <string name="str_switch_text">Read out through phone speaker as well?</string>
</resources>
