<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.textWhisper.app.whodattest.TutorialFragment"
    android:background="@android:color/holo_blue_light"
    android:weightSum="1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_app_header"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:gravity="center"
            android:text="@string/str_version"
            android:textColor="#ffff"
            android:textSize="4pt"
            android:id="@+id/textView2" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <TextView
            android:id="@+id/txt_thanks"
            style="@style/CustomTextView"
            android:text="@string/str_thanks"/>
        <TextView
            android:id="@+id/txt_inform"
            style="@style/CustomTextView"
            android:text="@string/str_inform"
            android:layout_below="@+id/txt_thanks"/>
        <TextView
            android:id="@+id/txt_example"
            style="@style/CustomTextView"
            android:text="@string/str_example"
            android:layout_below="@+id/txt_inform"/>
        <TextView
            android:id="@+id/txt_nextpage"
            style="@style/CustomTextView"
            android:text="@string/str_nextpage"
            android:layout_below="@+id/txt_example"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tutBtn"
           android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_arrow_right"
            android:text="@string/str_swipe"
            android:textColor="#ffff"
            android:elevation="20in"
            android:shadowColor="#0000"/>

    </LinearLayout>

</LinearLayout>