<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.textWhisper.app.whodattest.AccessibilityOpenFragment"
    android:background="@android:color/holo_blue_light"
    android:weightSum="1"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        >
        <TextView
            android:id="@+id/txt_instr_heading"
            style="@style/CustomTextView"
            android:text="@string/str_instr_head"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@drawable/linear_layout_border">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_switch_text"
            android:textColor="#ffff"
            android:id="@+id/readSwitch"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:checked="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:text="@string/str_instr_string"
                style="@style/CustomTextView"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_screen_tutorial"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:paddingRight="5pt"/>

        </LinearLayout>
     </LinearLayout>

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="0.1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_string"
            android:textColor="#ffff"
            android:id="@+id/switchAccessibility"
            android:background="@drawable/button_shape"
            android:layout_gravity="bottom"
            />
    </LinearLayout>

</LinearLayout>
